--- a/Weather.css
+++ b/Weather.css
@@ -54,12 +54,12 @@ h3 {
   font-weight: bold;
 }
 
-footer{
-    text-align: center;
-    color: white;
+footer {
+  text-align: center;
+  color: white;
 }
 .container {
-  background-image: url("../images/blue.jpg");
+  background-image: url("blue.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 10px;
@@ -67,4 +67,3 @@ footer{
   padding: 20px 50px;
   max-width: 900px;
 }
-
