--- a/Weather.css
+++ b/Weather.css
@@ -4,18 +4,22 @@ h3 {
   color: white;
   font-family: "Open Sans", sans-serif;
   margin-top: 25px;
+  font-weight: 900;
 }
 
+h3 {
+  text-transform: capitalize;
+}
 .search {
   margin-top: 50px;
 }
 
-.emoji {
+img {
   font-size: 100px;
   color: #f3c623;
   position: relative;
-  top: -135px;
-  left: 195px;
+  top: -80px;
+  left: 210px;
 }
 .temp {
   font-size: 80px;
@@ -24,6 +28,7 @@ h3 {
   margin-top: -120px;
 }
 .units a {
+  font-family: "Open Sans", sans-serif;
   font-size: 17px;
   font-weight: bold;
   position: relative;
@@ -31,8 +36,10 @@ h3 {
   color: white;
 }
 
+
 .details {
-  font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 900;
   color: white;
   font-size: 20px;
   margin-top: -95px;
@@ -51,10 +58,12 @@ h3 {
 .card-header,
 .card-title {
   color: white;
-  font-weight: bold;
+  font-weight: 900;
+  font-family: "Open Sans", sans-serif;
 }
 
 footer {
+  font-family: "Open Sans", sans-serif;
   text-align: center;
   color: white;
 }
